--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import Navigation from '../components/Navigation.astro'
 ---
 
 <html lang="en">
@@ -11,7 +11,6 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
-		<p>Testing</p>
+		<Navigation />
 	</body>
 </html>
